error when flag is set to false